--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1945,3 +1945,11 @@ top:calc(0px + 70%);
             transform: rotateY(0deg);
   }
 }
+
+@media screen and (max-width:460px){
+  #carouselmain {
+
+    top:100%;
+
+    }
+}
