--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1828,7 +1828,8 @@ top:calc(0px + 70%);
           perspective: 1000px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-          touch-action: none; /* for touch screen */
+          -ms-touch-action: auto;
+    touch-action: auto;/* for touch screen */
   z-index:21;
 }
 
@@ -1847,6 +1848,12 @@ top:calc(0px + 70%);
           transform-style: preserve-3d;
   -webkit-transform: rotateX(-10deg);
           transform: rotateX(-10deg);
+          -ms-touch-action: auto;
+    touch-action: auto;
+}
+#spin-container div{
+  -ms-touch-action: auto;
+    touch-action: auto;
 }
 
 
