--- a/css/styles.css
+++ b/css/styles.css
@@ -170,15 +170,24 @@
 
 }
 
+@media screen and (min-width: 800px) {
+  // this css will only be used when the screen size is min 800px
+}
 #cards {
-    cursor: grab;
     overflow: hidden;
-
     flex:auto;
 }
 
-#cardsinner {
+@media (hover: hover) {
+  #cards {
     cursor: grab;
+  }
+  #cardsinner {
+    cursor: grab;
+  }
+}
+
+#cardsinner {
     width:210%;
     flex:auto;
 }
