--- a/css/styles.css
+++ b/css/styles.css
@@ -174,13 +174,13 @@
   // this css will only be used when the screen size is min 800px
 }
 #cards {
-    overflow:scroll;
+    overflow:scroll !important;
     flex:auto;
 }
 
 @media (hover: hover) {
   #cards {
-    overflow: hidden;
+    overflow: hidden !important;
     cursor: grab;
   }
   #cardsinner {
