--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ min-height:135px;
   width:100%;
   background-image:url('https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80');
 z-index:-1 !important;
-top: 0px;
+top: 18%;
 background-size:cover;
 background-repeat: no-repeat; 
 background-position: center center;
@@ -209,20 +209,17 @@ background-position: center center;
 }
 
 .social-icons{
-    height:30px;
-    max-height:30px;
-    margin-top: 30px;
+
     min-width:125px !important;
     display: flex;
     flex-direction: row !important;
-    overflow-wrap: normal;
     flex-wrap: wrap !important;
     justify-content:space-around;
+
   }
   
   .social-icons .fa {
     font-size: 2.5em;
-    line-height: 0px;
     text-align: center;
     color: #fdbbaf;
     -webkit-transition: all 0.3s ease-in-out;
@@ -238,7 +235,6 @@ background-position: center center;
 
   .social-icons .fab {
     font-size: 2.5em;
-    line-height: 0px;
     text-align: center;
     color: #fdbbaf;
     -webkit-transition: all 0.3s ease-in-out;
@@ -252,4 +248,6 @@ background-position: center center;
     font-size: 4em;
   }
 
-  
+  span.blockspam {
+    display: none;
+  }
